openmediavault (7.0.5-1) stable; urgency=low

  *

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 29 Mar 2024 19:22:33 +0100

openmediavault (7.0.4-2) stable; urgency=low

  * Replace hdparm with smartctl in UDEV helper script.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 16 Mar 2024 12:33:17 +0100

openmediavault (7.0.3-1) stable; urgency=low

  * Add functionality required by plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 16 Mar 2024 11:05:17 +0100

openmediavault (7.0.2-2) stable; urgency=low

  * Fix problem when deploying file system quota.
  * Issue #1725: Add search field to shared folder page.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 09 Mar 2024 16:48:27 +0100

openmediavault (7.0.1-1) stable; urgency=low

  * Several improvements.
  * Add UI functionality required by plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 03 Mar 2024 12:51:23 +0100

openmediavault (7.0-32) unstable; urgency=low

  * Upgrade to Debian 12 (Bookworm).
  * Relocate Linux MD device (Software RAID) management into a
    separate plugin.
  * Add support for network ethernet devices using device tree
    aliases, e.g. `endX`.
  * Replace the `cron-apt` package with `unattended-upgrades`
    and `apticron`. The former ensures that security updates
    are installed automatically, and the latter ensures that
    notifications are sent when new package updates are available.
  * The `apt-listchanges` package will send you an email with
    a summary of the latest changes whenever packages are
    upgraded.
  * Add the ability to authenticate an RPC call by using the
    `X-OPENMEDIAVAULT-SESSIONID` header instead of a cookie.
    The session ID is returned with the response of the
    `Session::login` RPC.
  * Reduce the query time when determining the SMART information
    by reducing the query parameters to the minimum.
  * Add a dashboard widget to display the temperatures of all
    physical disks.