@@ -1,6 +1,7 @@
 openmediavault (7.0.5-1) stable; urgency=low
 
-  *
+  * Issue #1736: Add support to create yearly scheduled shared
+    folder snapshots.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 29 Mar 2024 19:22:33 +0100
 
